--- a/docs/content/standards/deepbookv2.mdx
+++ b/docs/content/standards/deepbookv2.mdx
@@ -3,6 +3,8 @@ title: DeepBookV2
 description: A central limit order book that offers features and functionality for marketplaces on Sui. Token exchanges leveraging the layer can feature transparency, a full range of trading options, and customer privacy.
 ---
 
+{@include: ../snippets/deepbook.mdx}
+
 As Sui's first native liquidity layer, DeepBook provides token trading activity. Token exchanges leveraging the layer can feature transparency, a full range of trading options, and customer privacy. DeepBook operates as a decentralized and permissionless environment to support token trades.
 
 DeepBook is open for community development. You can use the [Sui Improvement Proposals](https://github.com/sui-foundation/sips?ref=blog.sui.io) (SIPs) process to suggest changes to make DeepBook better.
