--- a/docs/content/guides/developer/app-examples.mdx
+++ b/docs/content/guides/developer/app-examples.mdx
@@ -9,7 +9,13 @@ The ever-growing number of examples in this section showcase packages for the Su
 
 ## Examples
 
-Sui is dedicated to providing a wide range of examples to guide you in proper programming techniques for the Sui blockchain. This list will continue to grow, so check back often. The projects are grouped by stack type and are sorted by complexity.
+Sui is dedicated to providing a wide range of examples to guide you in proper programming techniques for the Sui blockchain. This list will continue to grow, so check back often. 
+
+:::tip
+
+The projects are grouped by stack type and are sorted by complexity.
+
+:::
 
 ### Full-stack apps
 - [Distributed Counter](./app-examples/e2e-counter.mdx): An end-to-end example that creates a basic decentralized counter that anyone can increment, but only the object owner can reset it. The example includes Move code to create the package and leverages the Sui TypeScript SDK to provide a basic frontend.
