--- a/docs/content/standards/deepbookv2/design.mdx
+++ b/docs/content/standards/deepbookv2/design.mdx
@@ -1,8 +1,9 @@
 ---
 title: DeepBook Design
 sidebar_label: Design
-slug: /deepbook-design
 ---
+
+{@include: ../../snippets/deepbook.mdx}
 
 ## Pools {#pools}
 
