--- a/docs/content/standards/deepbookv2/orders.mdx
+++ b/docs/content/standards/deepbookv2/orders.mdx
@@ -1,7 +1,9 @@
 ---
 title: DeepBook Orders
-slug: /deepbook-orders
+sidebar_label: Orders
 ---
+
+{@include: ../../snippets/deepbook.mdx}
 
 ## Order book structure {#order-book-structure}
 
