--- a/docs/content/standards/deepbookv2/pools.mdx
+++ b/docs/content/standards/deepbookv2/pools.mdx
@@ -1,7 +1,8 @@
 ---
 title: DeepBook Pools
-slug: /deepbook-pools
 ---
+
+{@include: ../../snippets/deepbook.mdx}
 
 At the center of DeepBook is a hyper-efficient per-current pair shared-object `Pool` structure. This architecture maximally utilizes Sui's Narwhal and Bullshark engine to minimize contention and achieve high throughput.
 
