--- a/docs/content/standards/deepbookv2/query-the-pool.mdx
+++ b/docs/content/standards/deepbookv2/query-the-pool.mdx
@@ -1,7 +1,8 @@
 ---
 title: Query the Pool
-slug: /query-the-pool
 ---
+
+{@include: ../../snippets/deepbook.mdx}
 
 This section shows how to query the pool and order status.
 
