--- a/docs/content/standards/deepbookv2/routing-a-swap.mdx
+++ b/docs/content/standards/deepbookv2/routing-a-swap.mdx
@@ -1,7 +1,8 @@
 ---
 title: Routing a Swap
-slug: /routing-a-swap
 ---
+
+{@include: ../../snippets/deepbook.mdx}
 
 Follow these instructions to construct and execute a trade using a smart-routing swap.
 
