--- a/docs/content/standards/deepbookv2/trade-and-swap.mdx
+++ b/docs/content/standards/deepbookv2/trade-and-swap.mdx
@@ -1,7 +1,8 @@
 ---
 title: Trade and Swap
-slug: /trade-and-swap
 ---
+
+{@include: ../../snippets/deepbook.mdx}
 
 This section shows how to construct and execute a trade on the DeepBook protocol.
 
