--- a/docs/content/guides/developer/app-examples/coin-flip.mdx
+++ b/docs/content/guides/developer/app-examples/coin-flip.mdx
@@ -11,7 +11,7 @@ The guide is split into two parts:
 
 :::tip Additional resources
 
-The source code for the smart contracts and frontend can be found here: 
+Source code locations for the smart contracts and frontend: 
 - [Move package repository](https://github.com/MystenLabs/satoshi-coin-flip)
 - [Frontend repository](https://github.com/sui-foundation/satoshi-coin-flip-frontend-example)
 
