--- a/docs/content/guides/developer/app-examples/coin-flip.mdx
+++ b/docs/content/guides/developer/app-examples/coin-flip.mdx
@@ -36,7 +36,7 @@ Before getting started, make sure you have:
 
 ## Smart contracts {#smart-contracts}
 
-In this part of the guide, you write the Move contracts that manage the house and set up the coin flip logic. The first step is to [set up a Move package](../first-app/write-package.mdx) for storing your Move modules.
+In this part of the guide, you write the Move contracts that manage the house and set up the coin-flip logic. The first step is to [set up a Move package](../first-app/write-package.mdx) for storing your Move modules.
 
 :::info
 
