--- a/docs/content/guides/developer/app-examples/coin-flip.mdx
+++ b/docs/content/guides/developer/app-examples/coin-flip.mdx
@@ -683,7 +683,7 @@ To turn this into a complete dApp, you need to [create a frontend](#frontend).
 
 ## Frontend {#frontend}
 
-In this final part of the app example, you build a frontend (UI) that allows end users to place bets and take profits, and let's the admin manage the house.
+In this final part of the dApp example, you build a frontend (UI) that allows end users to place bets and take profits, and lets the admin manage the house.
 
 :::info
 
